# AutoPySC

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml  requirements.txt
APySC/: PATHS.py  __main__.py  cli.py  pyproject.toml
docs/: getting-started.md
src/apysc/: __main__.py  cli.py  paths.py
